# fpl-prediction-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: fpl.db
src/data_collection/: fpl_api.py  models.py
