[tool.poetry]
name = "fpl-prediction-system"
version = "0.1.0"
description = "This is a project for predicting fpl player points."
authors = ["Emmanuel Arkoh-Nelson <arkohnelsonemmanuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
flake8 = "^7.1.0"
black = "22.3.0"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
